<resources>
    <string name="app_name">SimpleDivision</string>
    <string name="insert"> </string>
    <string name="division"> / </string>
    <string name="hint_result">result</string>
    <string name="results"> = </string>

    <string name="nan_error">Nan result</string>
    <string name="inf_error">Inf result</string>
    <string name="valid_error">Err: enter valid numbers.</string>
    <string name="error">Error!</string>
</resources>
