<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/first"
        android:hint="@string/insert"
        android:layout_gravity="top"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="10dp"
        android:inputType="number"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/division"
        />

    <EditText
        android:id="@+id/second"
        android:hint="@string/insert"
        android:layout_gravity="top"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="10dp"
        android:inputType="number"
        />

    <Button
        android:id="@+id/result_button"
        android:onClick="onClickDivide"
        android:text="@string/results"
        android:layout_width="55dp"
        android:layout_height="55dp"
        />

    <TextView
        android:id="@+id/results"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_below="@id/first"
        android:textColor="@android:color/black"
        android:textSize="17dp"
        />

</LinearLayout>